// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.changeProposalAssessment should create a new proposal assessment on the proposal. 1`] = `
Object {
  "changeProposalAssessment": Object {
    "assessment": Object {
      "body": null,
      "estimatedCost": null,
      "id": Any<String>,
      "officialResponse": null,
      "state": "IN_PROGRESS",
      "updatedBy": Object {
        "firstname": "supervisor",
        "id": "VXNlcjp1c2VyNTIz",
        "lastname": "supervisor",
      },
    },
    "errorCode": null,
  },
}
`;

exports[`mutations.changeProposalAssessment should evaluate the proposal assessment 1`] = `
Object {
  "evaluateProposalAssessment": Object {
    "assessment": Object {
      "body": "Un elfe oserait aller sous terre alors qu’un nain ne le voudrait pas ?",
      "estimatedCost": 1500,
      "id": Any<String>,
      "officialResponse": "Françaises, français, je vous ai compris !",
      "state": "FAVOURABLE",
      "updatedBy": Object {
        "firstname": "supervisor",
        "id": "VXNlcjp1c2VyNTIz",
        "lastname": "supervisor",
      },
    },
    "errorCode": null,
  },
}
`;

exports[`mutations.changeProposalAssessment should modify the specified proposal assessment. 1`] = `
Object {
  "changeProposalAssessment": Object {
    "assessment": Object {
      "body": "Un elfe oserait aller sous terre alors qu’un nain ne le voudrait pas ?",
      "estimatedCost": 1500,
      "id": Any<String>,
      "officialResponse": "Françaises, français, je vous ai compris !",
      "state": "IN_PROGRESS",
      "updatedBy": Object {
        "firstname": "supervisor",
        "id": "VXNlcjp1c2VyNTIz",
        "lastname": "supervisor",
      },
    },
    "errorCode": null,
  },
}
`;

exports[`mutations.changeProposalAssessment should not change the proposal assessment if the user is not assigned to. 1`] = `
Object {
  "changeProposalAssessment": Object {
    "assessment": null,
    "errorCode": "UNASSIGNED_PROPOSAL",
  },
}
`;

exports[`mutations.evaluateProposalAssessment should evaluate the proposal assessment when authenticated as supervisor 1`] = `
Object {
  "evaluateProposalAssessment": Object {
    "assessment": Object {
      "body": "Un elfe oserait aller sous terre alors qu’un nain ne le voudrait pas ?",
      "estimatedCost": 1500,
      "id": Any<String>,
      "officialResponse": "Françaises, français, je vous ai compris !",
      "state": "FAVOURABLE",
      "updatedBy": Object {
        "firstname": "supervisor",
        "id": "VXNlcjp1c2VyNTIz",
        "lastname": "supervisor",
      },
    },
    "errorCode": null,
  },
}
`;

exports[`mutations.evaluateProposalAssessment should not modify the proposal assessment state value when authenticated as a user 1`] = `
Object {
  "evaluateProposalAssessment": Object {
    "assessment": null,
    "errorCode": "UNASSIGNED_PROPOSAL",
  },
}
`;
